# deep-research-mcp

./: .env.example  .gitignore  CHANGELOG.md  README.md  latest-changes-review.md  pyproject.toml
.github/workflows/: publish.yml
docs/: workflow.excalidraw
scripts/: create_diagram.py
src/deep_research_mcp/: __init__.py  citations.py  config.py  deep.py  quick.py  server.py
src/gemini_research_mcp/: __init__.py  config.py  deep.py  export.py  quick.py  server.py  storage.py  types.py
tests/: test_core.py  test_e2e.py  test_export.py  test_raw_deep_research.py  test_storage.py  test_streaming.py  test_vague_query_clarification.py
